WIP: migrate backend to Dgraph

--- a/server-gql/.vscode/settings.json
+++ b/server-gql/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.tokenColorCustomizations": {
         "semanticHighlighting": true
-    }
+    },
+    "rust-analyzer.inlayHints.enable": false
 }
