--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -55,3 +55,4 @@ juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "mas
 dgraph-tonic = "0.6"
 async-trait = "0.1"
 getset = "0.1"
+indextree = "4.2"
